--- a/app/views/index.html
+++ b/app/views/index.html
@@ -68,11 +68,12 @@
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (1)
+                        Jira Tickets (2)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
                       <ul class="govuk-list govuk-list-bulleted">
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3722">AS-3722 Supporting documents</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-3730">AS-3730 Decision notice upload - don't ask if non-determination</a></li>
                       </ul>
                     </div>
