--- a/app/views/appellant-submission/v11/full/appeal-documents/plans-drawings-list.html
+++ b/app/views/appellant-submission/v11/full/appeal-documents/plans-drawings-list.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
 {% block pageTitle %}
-  Supporting documents - Upload documents for your appeal - {{serviceName}} - GOV.UK
+  Plans and drawings - Upload documents for your appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -28,14 +28,14 @@
           Upload documents for your appeal
         </span>
         <h1 class="govuk-heading-l">
-          Supporting documents
+          Plans and drawings
         </h1>
 
         <p class="govuk-body">
-          You do not need to submit the supporting documents from your planning application. We'll get these from the local planning department.
+          You do not need to submit the plans and drawings from your planning application. We'll get these from the local planning department.
         </p>
         <p class="govuk-body">
-          You can submit new or updated documents that support your appeal.
+          You can submit new or updated plans and drawings that support your appeal.
         </p>
 
         <table class="govuk-table">
@@ -47,7 +47,7 @@
           </thead>
           <tbody class="govuk-table__body">
             {% set i = 0 %}
-            {% for file in data['appealsub-'+version+'-appealdocuments-supportinglist'] %}
+            {% for file in data['appealsub-'+version+'-appealdocuments-plansdrawingsfileslist'] %}
               {% set i = i + 1 %}
               {% if file != "" %}
                 <tr class="govuk-table__row">
@@ -55,7 +55,7 @@
                     {{ file }}
                   </td>
                   <td class="govuk-table__cell govuk-table__cell--numeric">
-                    <a class="govuk-link" href="supporting-documents-delete?row={{ i }}">
+                    <a class="govuk-link" href="plans-drawings-delete?row={{ i }}">
                       Delete<span class="govuk-visually-hidden"> {{ file }}</span>
                     </a>
                   </td>
@@ -70,7 +70,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a href="supporting-documents-upload" class="govuk-button govuk-button--secondary">Add more</a>
+          <a href="plans-drawings-upload" class="govuk-button govuk-button--secondary">Add more</a>
         </div>
 
       </form>
