--- a/app/views/appellant-submission/v11/full/appeal-documents/plans-drawings.html
+++ b/app/views/appellant-submission/v11/full/appeal-documents/plans-drawings.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
 {% block pageTitle %}
-  Supporting documents - Before you start - {{serviceName}} - GOV.UK
+  Plans and drawings - Before you start - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -28,22 +28,22 @@
           Upload documents for your appeal
         </span>
         <h1 class="govuk-heading-l">
-          Supporting documents
+          Plans and drawings
         </h1>
 
         <p class="govuk-body">
-          You do not need to submit the supporting documents from your planning application. We'll get these from the local planning department.
+          You do not need to submit the plans and drawings from your planning application. We'll get these from the local planning department.
         </p>
         <p class="govuk-body">
-          You can submit new or updated documents that support your appeal.
+          You can submit new or updated plans and drawings that support your appeal.
         </p>
 
         {{ govukRadios({
-          idPrefix: "appealsub-"+version+"-appealdocuments-supportingdocuments",
-          name: "appealsub-"+version+"-appealdocuments-supportingdocuments",
+          idPrefix: "appealsub-"+version+"-appealdocuments-plansdrawings",
+          name: "appealsub-"+version+"-appealdocuments-plansdrawings",
           fieldset: {
             legend: {
-              text: "Do you want to submit any new supporting documents with your appeal?",
+              text: "Do you want to submit any new plans or drawings with your appeal?",
               classes: "govuk-fieldset__legend--m"
             }
           },
@@ -51,12 +51,12 @@
             {
               value: "Yes",
               text: "Yes",
-              checked: checked("appealsub-"+version+"-appealdocuments-supportingdocuments", "Yes")
+              checked: checked("appealsub-"+version+"-appealdocuments-plansdrawings", "Yes")
             },
             {
               value: "No",
               text: "No",
-              checked: checked("appealsub-"+version+"-appealdocuments-supportingdocuments", "No")
+              checked: checked("appealsub-"+version+"-appealdocuments-plansdrawings", "No")
             }
           ]
         }) }}
