AS-3726 Enforcement notice question

--- a/app/views/appellant-submission/v11/before-you-start/appeal-about.html
+++ b/app/views/appellant-submission/v11/before-you-start/appeal-about.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
 {% block pageTitle %}
-  Is your appeal about any of the following? - Before you start - {{serviceName}} - GOV.UK
+  Was your planning application about any of the following? - Before you start - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -33,7 +33,7 @@
           name: "appealsub-"+version+"-beforeyoustart-appealabout",
           fieldset: {
             legend: {
-              text: "Is your appeal about any of the following?",
+              text: "Was your planning application about any of the following?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--l"
             }
