--- a/app/views/index.html
+++ b/app/views/index.html
@@ -68,15 +68,16 @@
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        Jira Tickets (4)
+                        Jira Tickets (5)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
                       <ul class="govuk-list govuk-list-bulleted">
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-3707">AS-3707 Site ownership questions</a></li>
-                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3722">AS-3722 Supporting documents</a></li>
-                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3730">AS-3730 Decision notice upload - don't ask if non-determination</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-3716">AS-3716 Before you start - check answers</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3722">AS-3722 Supporting documents</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3726">AS-3726 Enforcement notice question</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3730">AS-3730 Decision notice upload - don't ask if non-determination</a></li>
                       </ul>
                     </div>
                   </details>
