--- a/app/views/index.html
+++ b/app/views/index.html
@@ -42,8 +42,8 @@
               
                 <div class="govuk-inset-text govuk-!-margin-top-0">
                   {{ govukTag({
-                    classes: "govuk-tag--red govuk-!-margin-bottom-3",
-                    text: "WIP"
+                    classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                    text: "Ready for UR"
                   }) }}
                   <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                     Version 11 - Full appeal submission
