--- a/app/views/inspector/v5/index.html
+++ b/app/views/inspector/v5/index.html
@@ -34,6 +34,7 @@
             <th scope="col" class="govuk-table__header">Appeal age</th>
             <th scope="col" class="govuk-table__header">Appeal type</th>
             <th scope="col" class="govuk-table__header">Site visit date</th>
+            <th scope="col" class="govuk-table__header">Earliest decision date</th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
@@ -53,6 +54,9 @@
                   {{ item.siteVisitDateDay }}
                   {{ item.siteVisitDateMonth | formatShortMonth }}
                   {{ item.siteVisitDateYear }}
+                </td>
+                <td class="govuk-table__cell">
+                  {{ item.markedValidDaysAgo | earliestDecisionDate }}
                 </td>
               </tr>
             {% endif %}
