Content fixes for supporting docs and certificate D

--- a/app/views/appellant-submission/v11/full/appeal-documents/plans-drawings-list.html
+++ b/app/views/appellant-submission/v11/full/appeal-documents/plans-drawings-list.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
 {% block pageTitle %}
-  Plans and drawings - Upload documents for your appeal - {{serviceName}} - GOV.UK
+  New plans and drawings - Upload documents for your appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -28,15 +28,8 @@
           Upload documents for your appeal
         </span>
         <h1 class="govuk-heading-l">
-          Plans and drawings
+          New plans and drawings
         </h1>
-
-        <p class="govuk-body">
-          You do not need to submit the plans and drawings from your planning application. We'll get these from the local planning department.
-        </p>
-        <p class="govuk-body">
-          You can submit new or updated plans and drawings that support your appeal.
-        </p>
 
         <table class="govuk-table">
           <thead class="govuk-table__head">
