--- a/app/views/appellant-submission/v11/full/appeal-documents/supporting-documents-list.html
+++ b/app/views/appellant-submission/v11/full/appeal-documents/supporting-documents-list.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
 {% block pageTitle %}
-  Supporting documents - Upload documents for your appeal - {{serviceName}} - GOV.UK
+  New supporting documents - Upload documents for your appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -28,15 +28,8 @@
           Upload documents for your appeal
         </span>
         <h1 class="govuk-heading-l">
-          Supporting documents
+          New supporting documents
         </h1>
-
-        <p class="govuk-body">
-          You do not need to submit the supporting documents from your planning application. We'll get these from the local planning department.
-        </p>
-        <p class="govuk-body">
-          You can submit new or updated documents that support your appeal.
-        </p>
 
         <table class="govuk-table">
           <thead class="govuk-table__head">
