--- a/app/views/includes/inspector/v5/_site-visit.html
+++ b/app/views/includes/inspector/v5/_site-visit.html
@@ -35,7 +35,7 @@
           {{ item.siteVisitDateMonth | formatShortMonth }}
           {{ item.siteVisitDateYear }}
         </p>
-        {% if item.siteVisitType == "Access required" %}
+        {% if item.siteVisitType != "Unaccompanied" %}
           <h4 class="govuk-heading-s govuk-!-margin-bottom-0">
             Time
           </h4>
@@ -44,11 +44,13 @@
           </p>
         {% endif %}
 
-        {{ govukButton({
-          classes: "govuk-button--secondary govuk-!-margin-bottom-0 govuk-!-margin-top-5",
-          href: "/inspector/"+version+"/amend-visit",
-          text: "Amend site visit"
-        }) }}
+        {% if item.status != "decisiondue" %}
+          {{ govukButton({
+            classes: "govuk-button--secondary govuk-!-margin-bottom-0 govuk-!-margin-top-5",
+            href: "/inspector/"+version+"/amend-visit",
+            text: "Amend site visit"
+          }) }}
+        {% endif %}
       {% endif %}
     {% endif %}
   {% endfor %}
