Setup of case officer v7

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -439,6 +439,51 @@
 
                 <div class="govuk-inset-text govuk-!-margin-top-0">
                   <h3 class="govuk-heading-m">
+                    Case officer journeys v7
+                    {{ govukTag({
+                      classes: "govuk-tag--red govuk-!-margin-left-1",
+                      text: "WIP"
+                    }) }}
+                  </h3>
+                  <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                      <a href="/case-officer/v7/" title="">Dashboard</a>
+                    </li>
+                  </ul>
+
+                  <!--details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                    <summary class="govuk-details__summary">
+                      <span class="govuk-details__summary-text">
+                        User research (1)
+                      </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                      <ul class="govuk-list govuk-list--bullet">
+                        <li>
+                          <a href="https://miro.com/app/board/o9J_llyHSqU=/?moveToWidget=3074457367196007929&cot=14" target="blank" title="">User research notes (Miro)</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </details-->
+
+                  <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
+                    <summary class="govuk-details__summary">
+                      <span class="govuk-details__summary-text">
+                        Jira Tickets (3)
+                      </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                      <ul class="govuk-list govuk-list-bulleted">
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3737">AS-3737 View of Statements/Interested Parties</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3738">AS-3738 View of Final Comments</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3743">AS-3743 Case officer - Manage tasks (dashboard)</a></li>
+                      </ul>
+                    </div>
+                  </details>
+                </div>
+
+                <div class="govuk-inset-text govuk-!-margin-top-0">
+                  <h3 class="govuk-heading-m">
                     Case officer journeys v6
                     {{ govukTag({
                       classes: "govuk-tag--blue govuk-!-margin-left-1",
