--- a/app/assets/sass/pins/backoffice.scss
+++ b/app/assets/sass/pins/backoffice.scss
@@ -34,3 +34,86 @@
 .pins-table-questionnaires--status {
 	width: 10%
 }
+
+
+// Dashboard cards
+/*
+.pins-card {
+  background-color: #ffffff;
+  border: 1px solid #dee0e2;
+  //border-left: 3px solid $govuk-brand-colour;
+	border-top: 4px solid $govuk-brand-colour;
+  padding: 20px;
+  margin-bottom: 30px;
+}
+*/
+.pins-card-number {
+  font-size: 4rem;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.pins-card-content {
+  background-color: #f8f8f8;
+  padding: 30px 30px 10px 30px;
+  * {
+    margin-bottom: 0.5rem;
+  }
+}
+
+.pins-card-action {
+  background: white;
+  padding: 30px;
+  border-top: 1px solid #dee0e2;
+
+  p:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.pins-card > ul {
+  margin-bottom: 0;
+}
+
+.pins-card-action > ul {
+  margin-bottom: 0;
+}
+
+
+@media(max-width: 768px) {
+
+  .pins-card-content {
+    padding: 20px 20px 10px 20px;
+  }
+
+  .pins-card-action {
+    padding: 20px;
+  }
+  
+}
+
+.pins-dashboard-row {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.pins-dashboard-column {
+  flex: 1; /* additionally, equal width */
+  //padding: 1em;
+
+  .pins-card {
+    height: calc(100% - 40px);
+    padding-bottom: 10px;
+  }
+}
+
+.govuk-grid-column-one-quarter.pins-dashboard-column {
+  flex: 1 1 25%; /* additionally, equal width */
+}
+.govuk-grid-column-one-half.pins-dashboard-column {
+  flex: 1 1 50%; /* additionally, equal width */
+}
+
+.pins-card #search {
+  width: calc(100% - 100px);
+}
