--- a/app/views/case-officer/v7/index.html
+++ b/app/views/case-officer/v7/index.html
@@ -11,26 +11,19 @@
     },
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
-  {{ govukBreadcrumbs({
-    items: [
-      {
-        text: "Case officer dashboard"
-      }
-    ]
-  }) }}
 {% endblock %}
 
 {% block content %}
 
-  <!--div class="govuk-grid-row">
+  <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
       <h1 class="govuk-heading-xl">
-        Case officer dashboard
+        Dashboard
       </h1>
     
     </div>
-  </div-->
+  </div>
 
   <div class="govuk-grid-row pins-dashboard-row">
     <div class="govuk-grid-column-one-half pins-dashboard-column">
@@ -77,7 +70,7 @@
     </div>
   </div>
 
-  {# Size modifiers: xl, l, m #}
+
   <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
 
