AS-3880 Minor content changes to full appeal submission

--- a/app/views/appellant-submission/v11/before-you-start/planning-department.html
+++ b/app/views/appellant-submission/v11/before-you-start/planning-department.html
@@ -30,7 +30,7 @@
             Which local planning department dealt with your planning application?
           </label>
 
-          <p class="govuk-hint">This is the same thing as your 'local planning authority' or 'LPA'.</p>
+          <p class="govuk-hint">This is also known as your 'local planning authority' or 'LPA'.</p>
           <select class="govuk-select govuk-input--width-20" id="appealsub-{{version}}-beforeyoustart-planningdepartment" name="appealsub-{{version}}-beforeyoustart-planningdepartment">
             <option value=""></option>
             {% for lpa in data['lpas'] %}
