--- a/app/views/appellant-submission/v11/full/appeal-site/knows-none/advertising-appeal.html
+++ b/app/views/appellant-submission/v11/full/appeal-site/knows-none/advertising-appeal.html
@@ -35,7 +35,7 @@
           <p class="govuk-body">Because you do not know the landowners, you must have advertised your appeal in the press.</p>
         {% endif %}
 
-        <p class="govuk-body">You must have done this within the last 21 days using a copy of <a href="javascript:preventDefault();">the form in annexe 2A or 2B of the 'making your appeal' guidance</a>.</p>
+        <p class="govuk-body">You must have done this within the last 21 days using a copy of the <a href="javascript:preventDefault();">form in annexe 2A or 2B of the 'making your appeal' guidance</a>.</p>
 
         <h2 class="govuk-heading-m">Confirm that you have advertised your appeal</h2>
         <p class="govuk-body">I confirm that:</p>
