--- a/app/views/appellant-submission/v11/full/check-your-answers.html
+++ b/app/views/appellant-submission/v11/full/check-your-answers.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
 {% block pageTitle %}
-  Check your answers - Check your answers and submit appeal - {{serviceName}} - GOV.UK
+  Check your answers - Check your answers and submit your appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -25,7 +25,7 @@
       <form action="" method="post">
 
         <span class="govuk-caption-l">
-          Check your answers and submit appeal
+          Check your answers and submit your appeal
         </span>
         <h1 class="govuk-heading-xl">
           Check your answers
