--- a/app/views/appellant-submission/v11/full/contact-details/your-details.html
+++ b/app/views/appellant-submission/v11/full/contact-details/your-details.html
@@ -46,7 +46,7 @@
           id: "appealsub-"+version+"-aboutyou-yourname",
           name: "appealsub-"+version+"-aboutyou-yourname",
           label: {
-            text: "Your name"
+            text: "Your full name"
           },
           hint: {
             html: hintHtml
@@ -72,14 +72,14 @@
           autocomplete: "email",
           spellcheck: false,
           label: {
-            text: "Your email"
+            text: "Your email address"
           },
           value: data["appealsub-"+version+"-aboutyou-youremail"]
         }) }}
         
         {{ govukInput({
           label: {
-            text: "Telephone number"
+            text: "Your telephone number"
           },
           id: "appealsub-"+version+"-aboutyou-telephone",
           name: "appealsub-"+version+"-aboutyou-telephone",
