--- a/app/views/appellant-submission/v11/full/task-list.html
+++ b/app/views/appellant-submission/v11/full/task-list.html
@@ -103,13 +103,13 @@
             {% if taskcount == 4 %}
               <span class="app-task-list__task-name">
                 <a href="check-your-answers">
-                  Check your answers and submit appeal
+                  Check your answers and submit your appeal
                 </a>
               </span>
               <strong class="app-task-list__tag govuk-tag govuk-tag--grey">Not started</strong>
             {% else %}
               <span class="app-task-list__task-name">
-                Check your answers and submit appeal
+                Check your answers and submit your appeal
               </span>
               <strong class="app-task-list__tag govuk-tag govuk-tag--grey">Cannot start yet</strong>
             {% endif %}
