--- a/app/views/appellant-submission/v11/full/declaration.html
+++ b/app/views/appellant-submission/v11/full/declaration.html
@@ -1,7 +1,7 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
 {% block pageTitle %}
-  Declaration - Check your answers and submit appeal - {{serviceName}} - GOV.UK
+  Declaration - Check your answers and submit your appeal - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -25,7 +25,7 @@
       <form action="" method="post">
 
         <span class="govuk-caption-l">
-          Check your answers and submit appeal
+          Check your answers and submit your appeal
         </span>
         <h1 class="govuk-heading-xl">
           Declaration
@@ -48,7 +48,7 @@
         </div>
         
         {{ govukWarningText({
-          text: "Once you submit your appeal, you cannot add to or edit it.",
+          text: "Once you submit your appeal, you cannot add to or change it.",
           iconFallbackText: "Warning"
         }) }}        
 
