AS-3931 addition of agricultural holdings questions

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -73,6 +73,7 @@
                     </summary>
                     <div class="govuk-details__text">
                       <ul class="govuk-list govuk-list-bulleted">
+                        <li><a href="https://pins-ds.atlassian.net/browse/AS-3529">AS-3529 Full Planning Agricultural Holding information</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-3707">AS-3707 Site ownership questions</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-3716">AS-3716 Before you start - check answers</a></li>
                         <li><a href="https://pins-ds.atlassian.net/browse/AS-3722">AS-3722 Supporting documents</a></li>
